# HealthAI

./: .dockerignore  .env.example  .flake8  .gitignore  .replit  Dockerfile  README.md  ai_client.py  app.py  config.py  db.py  docker-compose.yml  gemini_api.py  healthai.db  pyproject.toml  replit.md  requirements-dev.txt  requirements.txt  validation.py
.github/workflows/: ci.yml
api/: dependencies.py  main.py
api/routers/: auth.py  chat.py  enhanced_chat.py  health.py  medical_history.py  treatment.py
api/schemas/: chat.py  health.py  medical_history.py  treatment.py  user.py
attached_assets/: Pasted-Objective-Build-a-HealthAI-web-application-using-Streamlit-that-serves-as-an-intelligent-healthcare-1763736678068_1763736678069.txt
backend/ai/: prompt_builder.py  prompt_templates.py  safety_checker.py
backend/exceptions/: auth_exceptions.py  validation_exceptions.py
backend/models/: __init__.py  allergy.py  chat.py  health_metric.py  medical_condition.py  medication.py  symptom_log.py  treatment.py  user.py
backend/repositories/: allergy_repository.py  base.py  chat_repository.py  health_repository.py  medical_history_repository.py  medication_repository.py  symptom_repository.py  treatment_repository.py  user_repository.py
backend/services/: auth_service.py  chat_service.py  enhanced_chat_service.py  health_service.py  medical_context_service.py  treatment_service.py
backend/utils/: database.py  jwt.py  logger.py
frontend/: app.py
tests/: conftest.py  test_models.py  test_repositories.py  test_validation.py
