[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.5",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
